Update to latest upstream

--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,11 @@ nbproject/*
 
 # Ignore .env files as they are personal
 /.env
+
+# Ignore mounts
+web/sites/default/files
+tmp
+private
+.drush
+drush-backups
+.console
