--- a/docroot/profiles/govcms/composer.json
+++ b/docroot/profiles/govcms/composer.json
@@ -39,7 +39,7 @@
         "drupal/consumers": "1.9",
         "drupal/contact_storage": "1.0.0",
         "drupal/context": "4.0-beta2",
-        "drupal/core-recommended": "8.9.2",
+        "drupal/core-recommended": "8.9.3",
         "drupal/crop":"2.1",
         "drupal/ctools": "3.2.0",
         "drupal/diff": "1.0-rc2",
@@ -67,13 +67,13 @@
         "drupal/graphql": "3.0.0-rc2",
         "drupal/honeypot": "1.29",
         "drupal/inline_entity_form": "1.0-rc1",
-        "drupal/key": "1.12",
+        "drupal/key": "1.14",
         "drupal/linked_field": "1.1.0",
         "drupal/linkit": "5.0-beta9",
         "drupal/login_security": "1.5",
         "drupal/media_entity_file_replace": "1.0-beta2",
         "drupal/memcache": "2.0",
-        "drupal/menu_block": "1.5",
+        "drupal/menu_block": "1.6",
         "drupal/menu_trail_by_path": "1.1",
         "drupal/metatag": "1.9",
         "drupal/minisite": "1.3",
@@ -86,7 +86,7 @@
         "drupal/password_policy": "3.0-beta1",
         "drupal/pathauto": "1.8.0",
         "drupal/permissions_by_term": "2.12",
-        "drupal/real_aes": "2.2",
+        "drupal/real_aes": "2.3",
         "drupal/recaptcha": "2.4",
         "drupal/redirect": "1.3",
         "drupal/restui": "1.16.0",
@@ -96,7 +96,7 @@
         "drupal/search_api_solr": "3.9",
         "drupal/search_api_attachments": "1.0-beta16",
         "drupal/seckit": "1.1",
-        "drupal/shield": "1.2",
+        "drupal/shield": "1.4",
         "drupal/simple_oauth": "4.5",
         "drupal/simple_sitemap": "3.4",
         "drupal/swiftmailer": "1.0-beta2",
@@ -150,8 +150,7 @@
               "Replace deprecated AllowedTagsXssTrait": "https://www.drupal.org/files/issues/2020-04-17/3128413-10.patch"
             },
             "drupal/core": {
-                "Private file download returns access denied, when file attached to revision other than current - https://www.drupal.org/project/drupal/issues/1452100#comment-13653216": "https://www.drupal.org/files/issues/2020-05-29/1452100-file-access-97.patch",
-                "Unrecognised entity operation passed to Menu Link Content throws exceptions - https://www.drupal.org/project/drupal/issues/3016038": "https://www.drupal.org/files/issues/2020-07-23/3016038-32.patch"
+                "Private file download returns access denied, when file attached to revision other than current - https://www.drupal.org/project/drupal/issues/1452100#comment-13653216": "https://www.drupal.org/files/issues/2020-05-29/1452100-file-access-97.patch"
             },
             "drupal/events_log_track": {
                 "Events Log Track breaks Entity Browser #5 - https://www.drupal.org/project/events_log_track/issues/2934036": "https://www.drupal.org/files/issues/2018-04-19/2934036-check_empty_submit-5.patch",
