Disable cache for admin pages to make password reset work

--- a/.platform/routes.yaml
+++ b/.platform/routes.yaml
@@ -15,3 +15,9 @@
 "https://www.{default}/":
     type: redirect
     to: "https://{default}/"
+
+https://{default}/wp-admin/:
+    type: upstream
+    upstream: "app:http"
+    cache:
+        enabled: false
