--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -9,6 +9,10 @@ name: 'app'
 # The runtime the application uses.
 type: 'php:7.4'
 
+var:
+    env:
+        FOO: BAR
+
 runtime:
     # Enable the redis extension so Drupal can communicate with the Redis cache.
     extensions:
