--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -7,12 +7,13 @@
 name: 'app'
 
 # The runtime the application uses.
-type: 'php:7.4'
+type: 'php:8.0'
 
 runtime:
     # Enable the redis extension so Drupal can communicate with the Redis cache.
     extensions:
         - redis
+        - sodium
 
 # The relationships of the application with services or other applications.
 #
