disable extension bf.

--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -13,7 +13,7 @@ runtime:
     # Enable the redis extension so Drupal can communicate with the Redis cache.
     extensions:
         - redis
-        - blackfire
+        # - blackfire
         - sodium
         - apcu
 
