--- a/composer.json
+++ b/composer.json
@@ -18,14 +18,34 @@
             "url": "https://packages.drupal.org/8"
         },
         {
-            "type": "composer",
-            "url": "https://asset-packagist.org"
+            "type": "package",
+            "package": {
+                "name": "harvesthq/chosen",
+                "version": "v1.8.7",
+                "type": "drupal-library",
+                "dist": {
+                    "type": "zip",
+                    "url": "https://github.com/harvesthq/chosen/releases/download/v1.8.7/chosen_v1.8.7.zip"
+                }
+            }
+        },
+        {
+            "type": "package",
+            "package": {
+                "name": "dropzone/dropzone",
+                "version": "v5.7.2",
+                "type": "drupal-library",
+                "dist": {
+                    "type": "zip",
+                    "url": "https://github.com/dropzone/dropzone/archive/refs/tags/v5.7.2.zip"
+                }
+            }
         }
     ],
     "require": {
-        "bower-asset/chosen": "1.8.7",
         "composer/installers": "^2.0",
         "cweagans/composer-patches": "^1.7",
+        "dropzone/dropzone": "5.7.2",
         "drupal/address": "1.10.0",
         "drupal/admin_toolbar": "3.1.0",
         "drupal/adminimal_admin_toolbar": "1.11.0",
@@ -114,7 +134,7 @@
         "drupal/video_embed_field": "2.4",
         "drupal/webform": "6.1.2",
         "drush/drush": "^10",
-        "npm-asset/dropzone": "5.9.3",
+        "harvesthq/chosen": "1.8.7",
         "oomphinc/composer-installers-extender": "^2.0",
         "platformsh/config-reader": "^2.4",
         "swiftmailer/swiftmailer": "6.3.0",
